import "common.info_header.proto";

package ndcs;

message query_sql_text
{
    required common.info_header header          = 1;  // Common header for all Qpid messages
    required string             query_id        = 2;  // Unique identifier for the SQL statement, generated by the SQL compiler.
    required int64              time_ts_utc     = 3;  // Timestamp, in Coordinated Universal Time, indicating when query execution began (that is, when an execute statement is issued for the prepared query).         
    optional int64              time_ts_lct     = 4;  // Timestamp, in Local Civil Time, indicating when query execution began (that is, when an execute statement is issued for the prepared query).          
    required int64              fragment_number = 5;  // Ordinal position of the fragment of query text, starting with zero (0). A maximum of 14000 characters of query text is written per row. If the query text is written across multiple rows, the value in this field is incremented for each row, starting with 0.
    required string             sql_text        = 6;  // Complete SQL text for the query. A maximum of 14000 characters is written per row. TIP: The complete SQL text can be joined to the query statistics in the METRIC_QUERY_<n> view by joining on the EXEC_START_LCT_TS and QUERY_ID fields.
}
