import "common.info_header.proto";

package ndcs;

message session_end_stats
{
    required common.info_header header                      = 1;  // Common header for all Qpid messages
    required string             session_id                  = 2;  // Unique session ID generated by the HPDCS server when the connection was established.
    optional string             session_status              = 3;  // START if this record contains information collected at the start of the session, or END if it contains statistics collected at the end of the session.
    optional int64              total_odbc_execution_time   = 4;  // Total CPU time, in microseconds, for the executing queries in the session from the time when the connection starts to the time it ends.
    optional int64              total_odbc_elapsed_time     = 5;  // Total elapsed execution time, in microseconds, for the queries in the session from the time when the connection starts to the time it ends.
    optional int64              total_insert_stmts_executed = 6;  // Total number of SQL INSERT statements sent by the ODBC or JDBC driver to the HPDCS server. This value does not include internally generated SQL statements.
    optional int64              total_delete_stmts_executed = 7;  // Total number of SQL DELETE statements sent by the ODBC or JDBC driver to the HPDCS server. This value does not include internally generated SQL statements.
    optional int64              total_update_stmts_executed = 8;  // Total number of SQL UPDATE statements sent by the ODBC or JDBC driver to the HPDCS server. This value does not include internally generated SQL statements.
    optional int64              total_select_stmts_executed = 9;  // Total number of SQL SELECT statements sent by the ODBC or JDBC driver to the HPDCS server. This value does not include internally generated SQL statements.
    optional int64              total_catalog_stmts         = 10; // Total number of SQL catalog statements sent by the ODBC or JDBC driver to the HPDCS server.
    optional int64              total_prepares              = 11; // Total number of SQLPrepare calls.
    optional int64              total_executes              = 12; // Total number of SQLExecute calls.
    optional int64              total_fetches               = 13; // Total number of SQLFetch calls.
    optional int64              total_closes                = 14; // Total number of SQL CLOSE calls sent by the ODBC or JDBC driver to the HPDCS server.
    optional int64              total_execdirects           = 15; // Total number of SQLExecDirect calls.
    optional int64              total_errors                = 16; // Total number of SQL statement execution errors detected by the HPDCS server.
    optional int64              total_warnings              = 17; // Total number of SQL statement warnings detected by the HPDCS server.
}
