import "common.info_header.proto";

package ndcs;

message session_start_stats
{
    required common.info_header header           				= 1;  // Common header for all Qpid messages
    required string             session_id       				= 2;  // Unique session ID generated by the HPDCS server when the connection was established.
    optional string             session_status   				= 3;  // START if this record contains information collected at the start of the session, or END if it contains statistics collected at the end of the session.
    optional int64              user_id          				= 4;  // For future use.
    optional string             user_name        				= 5;  // Name of the user connected to the instance. 
    optional string             role_name        				= 6;  // Name of the role associated with the user who is connected to the instance.
    optional string             client_name      				= 7;  // Name of the client workstation.
    optional string             client_user_name 				= 8;  // Name of the user who originated the session by logging in to a client workstation. If the name is not available from the ODBC or JDBC driver, this field is NULL.
    optional string             application_name 				= 9;  // Name of the client application that connects to the database.
    optional string             datasource_name  				= 10; // Data-source name specified by the client at the time of the connection.
    optional int64              entry_id_lct_ts					= 11; // Timestamp, in Local Civil Time, indicating when this row was last updated.
    optional int64              entry_id_utc_ts					= 12; // Timestamp, in Coordinated Universal Time, indicating when this row was last updated.
    optional int64              total_login_elapsed_time_mcsec  		= 13; // Time in microseconds spent on login, including processing steps on the system and time required for interaction with the external authentication server. 
    optional int64              ldap_login_elapsed_time_mcsec   		= 14; // Time in microseconds spent on communication with the external authentication server, including time waiting for replies from the server.
    optional int64              sql_user_elapsed_time_mcsec   	        	= 15; // Time in microseconds spent on reading metadata.
    optional int64              search_connection_elapsed_time_mcsec   		= 16; // Time in microseconds spent on establishing a search connection with the external authentication server, including time waiting for replies from the server.
    optional int64              search_elapsed_time_mcsec   	         	= 17; // Time in microseconds spent on performing a search with the external authentication server, including time waiting for replies from the server.
    optional int64              authentication_connection_elapsed_time_mcsec	= 18; // Time in microseconds spent on establishing a bind connection with the external authentication server, including time waiting for replies from the server.
    optional int64              authentication_elapsed_time_mcsec   		= 19; // Time in microseconds spent on performing a bind with the external authentication server, including time waiting for replies from the server.
}
