import "common.info_header.proto";

package wms;

message wms_pertablestats
{
	required common.info_header header		= 1;  // Common header for all Qpid messages
	required string query_id				= 2;  // Unique identifier for the SQL statement, generated by the SQL compiler
	required string table_ansi_name			= 3;  // Name of a table used in the query
	optional double accessed_rows			= 4;  // Number of rows in the table accessed by the query. This number includes the records examined by the disk process, the file system, and the executor
	optional double used_rows				= 5;  // Number of rows in the table actually used by the query. This value is the number of rows that were returned by the Executor in Disk (EID) process after evaluating non-key predicates
	optional int64 disk_ios					= 6;  // Number of disk reads that occurred while accessing the table referenced by the query
	optional int64 num_messages				= 7;  // Number of messages sent while accessing the table referenced by the query, including messages exchanged between the file system and the disk process
	optional int64 messages_bytes			= 8;  // Number of message bytes sent while accessing the table referenced by the query
	optional int64 escalations				= 9;  // Number of times a row lock was escalated to a file lock for the table referenced by the query
	optional int64 lock_waits				= 10;  // Number of times the query waited for a lock request on the table LOCK_WAITS LARGEINT
	optional int64 process_busy_time		= 11;  // Actual CPU time in microseconds spent by the disk processes involved in accessing the table referenced by the query
	optional int64 opens					= 12;  // Number of OPEN partition calls performed by the SQL executor on behalf of the table
	optional int64 open_time				= 13;  // Time in microseconds the executor spent doing OPENs while accessing the table referenced by the query
	optional int64 current_ts_lct          	= 14;  // Timestamp in Local Civil Time when the pertable stats data is gathered. The display format is <yyyy>-<mm>-<dd> (for year, month, and day) and <hh>:<mm>:<ss>.<ssssss> (for hours, minutes, seconds, and microseconds).
	optional int64 current_ts_utc          	= 15;  // Timestamp in Coordinated Universal Time when the pertable stats data is gathered. The display format is <yyyy>-<mm>-<dd> (for year, month, and day) and <hh>:<mm>:<ss>.<ssssss> (for hours, minutes, seconds, and microseconds).
}
