import "common.info_header.proto";

package wms;

message wms_resources
{
	required common.info_header header		= 1;  // Common header for all Qpid messages
	optional int32  cpu_busy 			    = 2;  // Average percentage of CPU busy across all the SQL nodes in the instance at a given time. For more information about how CPU busy is calculated, see the SeaQuest Workload Management Services Guide. 
	optional int32  memory_usage			= 3;  // Average percentage of memory usage across all the SQl nodes in the instance at a given time. For more information about how memory usage is calculated, see the SeaQuest Workload Management Services Guide
	optional int32  ssd_usage			    = 4;  // Highest percentage of SSD (solid-state drive) usage among all the SQL nodes of the instance at a given time. For more information about how SSD usage is calculated, see the SeaQuest Workload Management Services Guide.
	required int64  current_ts_lct 			= 5;  // Timestamp in Local Civil Time when the system resources data is gathered. This data is gathered every five minutes. The display format is <yyyy>-<mm>-<dd> (for year, month, and day) and <hh>:<mm>:<ss>.<ssssss> (for hours, minutes, seconds, and microseconds).
	required int64  current_ts_utc 			= 6;  // Timestamp in Coordinated Universal Time when the system resources data is gathered. This data is gathered every five minutes. The display format is <yyyy>-<mm>-<dd> (for year, month, and day) and <hh>:<mm>:<ss>.<ssssss> (for hours, minutes, seconds, and microseconds).
	optional int32  max_node_esps			= 7;  // Max esp count between all nodes.
	optional int32  avg_node_esps			= 8;  // Average esp count across all nodes.
}

